--- a/eksamens projekt/RMarkDown_Gruppe24.Rmd
+++ b/eksamens projekt/RMarkDown_Gruppe24.Rmd
@@ -185,7 +185,7 @@ Vi gør det samme med den anden store kategori af fattige: Bønder uden jord:
 Bonde_u_jord <- filter(aarhus_data,Erhvervskategori=="Bonde uden jord")
 #Alder
 ggplot(Bonde_u_jord,aes(alder))+
-  geom_bar(aes(fill = erhverv))+
+  geom_bar()+
 theme(axis.text = element_text(angle = -90))+
   labs(title = "Bønder uden jords fordeling i alder",y="Antal bønder uden jord")
 #Geografisk placering
@@ -247,10 +247,8 @@ ggplot(Aftægt_data,aes(sogn))+
   labs(title = "Aftægtsfolk/pensioneredes fordeling i sogn",y="Antal aftægtsfolk/pensionerede")
 ```
 
-Arbejdsløse:
 
-```{r}
-```
+
 
 
 
